ISSTA-2023-AE/data/Evaluation/USING-GRAYC-IN-THE-WILD/bug-reports/grayc-gcc-crash/12-useless_type_conversion_p-gimple/details.txt
fuzzer-file-879.c: In function ‘foo’:
fuzzer-file-879.c:86:9: error: ‘n’ undeclared (first use in this function)
   86 | ;bar = &n;
      |         ^
fuzzer-file-879.c:86:9: note: each undeclared identifier is reported only once for each function it appears in
fuzzer-file-879.c:87:30: error: ‘l_7’ undeclared (first use in this function)
   87 | (((safe_sub_func_int64_t_s_s(l_7, l_7) && l_7) , l_7) < 0x0566A927L)l_8 = 0L;
      |                              ^~~
fuzzer-file-879.c:87:69: error: expected ‘;’ before ‘l_8’
   87 | (((safe_sub_func_int64_t_s_s(l_7, l_7) && l_7) , l_7) < 0x0566A927L)l_8 = 0L;
      |                                                                     ^~~
      |                                                                     ;
fuzzer-file-879.c:91:2: error: ‘l_2’ undeclared (first use in this function); did you mean ‘l_9’?
   91 | ;l_2 = (-1L);
      |  ^~~
      |  l_9
fuzzer-file-879.c: At top level:
fuzzer-file-879.c:95:11: warning: initialization of ‘void *’ from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
   95 | void *n = 26120;
      |           ^~~~~
fuzzer-file-879.c:96:3: warning: data definition has no type or storage class
   96 |   bar = &n;
      |   ^~~
fuzzer-file-879.c:96:3: warning: type defaults to ‘int’ in declaration of ‘bar’ [-Wimplicit-int]
fuzzer-file-879.c:96:3: error: conflicting types for ‘bar’; have ‘int’
fuzzer-file-879.c:25:8: note: previous declaration of ‘bar’ with type ‘void **’
   25 | void **bar;
      |        ^~~
fuzzer-file-879.c:97:8: error: expected declaration specifiers or ‘...’ before ‘&’ token
   97 |   foo (&n, 27079, 0xc811);
      |        ^
fuzzer-file-879.c:97:12: error: expected declaration specifiers or ‘...’ before numeric constant
   97 |   foo (&n, 27079, 0xc811);
      |            ^~~~~
fuzzer-file-879.c:97:19: error: expected declaration specifiers or ‘...’ before numeric constant
   97 |   foo (&n, 27079, 0xc811);
      |                   ^~~~~~
fuzzer-file-879.c:98:9: error: expected declaration specifiers or ‘...’ before numeric constant
   98 |   exit (30462);
      |         ^~~~~
fuzzer-file-879.c:99:1: error: expected identifier or ‘(’ before ‘}’ token
   99 | }
      | ^
fuzzer-file-879.c: In function ‘foo’:
fuzzer-file-879.c:76:16: internal compiler error: tree check: expected class ‘type’, have ‘exceptional’ (error_mark) in useless_type_conversion_p, at gimple-expr.cc:87
   76 |         for (h = bar, i = 12622 + 13963 - ((long)(((double)5705) + ((double)(i)))); h; h = (void **)*h, i++)
      |              ~~^~~~~
0x7e598b tree_class_check_failed(tree_node const*, tree_code_class, char const*, int, char const*)
	.././../gcc-source/gcc/tree.cc:8829
0x712633 tree_class_check(tree_node*, tree_code_class, char const*, int, char const*)
	.././../gcc-source/gcc/tree.h:3580
0x712633 useless_type_conversion_p(tree_node*, tree_node*)
	.././../gcc-source/gcc/gimple-expr.cc:87
0xc3e491 gimplify_modify_expr
	.././../gcc-source/gcc/gimplify.cc:6035
0xc2d9f6 gimplify_expr(tree_node**, gimple**, gimple**, bool (*)(tree_node*), int)
	.././../gcc-source/gcc/gimplify.cc:15098
0xc3c583 gimplify_stmt(tree_node**, gimple**)
	.././../gcc-source/gcc/gimplify.cc:7151
0xc3c583 gimplify_compound_expr
	.././../gcc-source/gcc/gimplify.cc:6344
0xc2dc1b gimplify_expr(tree_node**, gimple**, gimple**, bool (*)(tree_node*), int)
	.././../gcc-source/gcc/gimplify.cc:15088
0xc310c6 gimplify_stmt(tree_node**, gimple**)
	.././../gcc-source/gcc/gimplify.cc:7151
0xc2e1bb gimplify_statement_list
	.././../gcc-source/gcc/gimplify.cc:2019
0xc2e1bb gimplify_expr(tree_node**, gimple**, gimple**, bool (*)(tree_node*), int)
	.././../gcc-source/gcc/gimplify.cc:15543
0xc310c6 gimplify_stmt(tree_node**, gimple**)
	.././../gcc-source/gcc/gimplify.cc:7151
0xc3d0d4 gimplify_cond_expr
	.././../gcc-source/gcc/gimplify.cc:4493
0xc2e110 gimplify_expr(tree_node**, gimple**, gimple**, bool (*)(tree_node*), int)
	.././../gcc-source/gcc/gimplify.cc:15055
0xc310c6 gimplify_stmt(tree_node**, gimple**)
	.././../gcc-source/gcc/gimplify.cc:7151
0xc2e1bb gimplify_statement_list
	.././../gcc-source/gcc/gimplify.cc:2019
0xc2e1bb gimplify_expr(tree_node**, gimple**, gimple**, bool (*)(tree_node*), int)
	.././../gcc-source/gcc/gimplify.cc:15543
0xc310c6 gimplify_stmt(tree_node**, gimple**)
	.././../gcc-source/gcc/gimplify.cc:7151
0xc3d0d4 gimplify_cond_expr
	.././../gcc-source/gcc/gimplify.cc:4493
0xc2e110 gimplify_expr(tree_node**, gimple**, gimple**, bool (*)(tree_node*), int)
	.././../gcc-source/gcc/gimplify.cc:15055
Please submit a full bug report, with preprocessed source (by using -freport-bug).
Please include the complete backtrace with any bug report.
See <https://gcc.gnu.org/bugs/> for instructions.
